--- a/excilys-bank-web/src/main/webapp/css/icons.css
+++ b/excilys-bank-web/src/main/webapp/css/icons.css
@@ -13,7 +13,6 @@ a.icon,span.icon {
 	margin: 0 auto;
 	background-image: url('../img/logo_excilys.png'); /** sprite-ref: sprite; */
 	background-repeat: no-repeat;
-	background-image: url('../img/logo_excilys.png');
 }
 
 .users {
